# ccs-prediction

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml
mol2ccs/: __init__.py  confidence_model.py  constants.py  graph.py  model.py  train_and_predict.py  utils.py
notebooks/data_processing/: 1_ccsbase.ipynb  1_database_similarity.ipynb  1_metlin.ipynb  2_data_splits.ipynb  3_3dfile_ccs_value_editing.ipynb  3_threed-stuff-and-split-combined.ipynb  README.md  database_similarity.ipynb  metlin.ipynb
notebooks/exploring_predictions/: README.md  ccsbase_both.ipynb  ccsbase_train_test_metlin.ipynb  combined.ipynb  metlin_both.ipynb  metlin_train_test_ccsbase.ipynb  utils.py
notebooks/reproduce_figures/: README.md  figure_4.ipynb  figure_5.ipynb  supplementary_figure_11.ipynb  utils.py
